--- a/PageEconomie.html
+++ b/PageEconomie.html
@@ -31,6 +31,10 @@
             <div class="disclaimer">
                 <span>ATTENTION : il est important de noter que toutes les informations présentent sur cette page n'ont pas ete mises a jour depuis 2023.</span>
             </div>
+            <div class="contextéco">
+                <span>fnjkesnbfk</span>
+            </div>
+            <div></div>
             <div class="div_container">
                 <div class="eltg">
                     <div class="texte1">
