Mise en place des bonnes images articles

--- a/PageEnCeMoment.html
+++ b/PageEnCeMoment.html
@@ -82,6 +82,15 @@
 
     </section>
 
+    <section id="Feed">
+        <h1>3 dernier Tweet Arkane Studios / X </h1>
+        <div id="contient">
+        <a href="https://x.com/ArkaneStudios/status/1712845659680763982"><img src="feed1.png" alt="Dernier tweet ArkaneStudios"></a>
+        <a href="https://x.com/ArkaneStudios/status/1787837804287860886"><img src="feed2.png" alt="Avant dernier tweet ArkaneStudios"></a>
+        <a href="https://x.com/ArkaneStudios/status/1265643934526722049"><img src="feed3.png" alt="Avant dernier dernier tweet ArkaneStudios"></a>
+    </div>  
+    </section>
+
      
     
     <dialog id="dialog1">
