--- a/PageEnCeMoment.html
+++ b/PageEnCeMoment.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -83,7 +83,7 @@
     </section>
 
     <section id="Feed">
-        <h1>3 dernier Tweet Arkane Studios / X </h1>
+        <h2>3 dernier Tweet Arkane Studios / X </h2>
         <div id="contient">
         <a href="https://x.com/ArkaneStudios/status/1712845659680763982"><img src="feed1.png" alt="Dernier tweet ArkaneStudios"></a>
         <a href="https://x.com/ArkaneStudios/status/1787837804287860886"><img src="feed2.png" alt="Avant dernier tweet ArkaneStudios"></a>
@@ -118,7 +118,7 @@
     </dialog>
 
     <dialog id="dialog2">
-        <h1>La fermeture des serveurs de Redfall : Un coup dur pour Arkane Austin</h2>
+        <h1>La fermeture des serveurs de Redfall : Un coup dur pour Arkane Austin</h1>
         <p>Le studio Arkane Austin, célèbre pour des titres comme Prey et Dishonored, est sur le point de fermer définitivement ses portes. Cette fermeture intervient après une série de difficultés rencontrées par Redfall, un jeu multijoueur en monde ouvert lancé en mai 2023. Ce dernier n'a pas réussi à capter l'attention du public et a reçu des critiques largement négatives, avec un score de seulement 3,5 sur Metacritic. Malgré des tentatives de mise à jour et d'amélioration du jeu, notamment l'ajout d'un mode performance à 60 FPS, cela n'a pas suffi à sauver la réputation du jeu ni à stabiliser l'avenir du studio</p>
         <h2>Un dernier patch avant la fermeture</h2>
         <p>Avant la fermeture définitive d'Arkane Austin, une ultime mise à jour pour Redfall sera déployée. Ce patch, appelé « Game Update 4 », est particulièrement attendu par la communauté des joueurs, car il introduira un mode hors-ligne. Cette fonctionnalité était l'une des principales demandes des joueurs depuis le lancement du jeu, qui jusqu'à présent nécessitait une connexion permanente aux serveurs. </p>
