--- a/PageEnCeMoment.html
+++ b/PageEnCeMoment.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,7 +30,7 @@
 
 
     <section id="Titre">
-        <h1>En ce moment</h1>
+        <h2>En ce moment</h2>
         <h3>Sur cette page vous retrouverez les dernières informations d'Arkane sous forme d'article ci dessous</h3>
     </section>
 
