--- a/PageEconomie.html
+++ b/PageEconomie.html
@@ -18,7 +18,7 @@
         </div>
        
         <div id="Navigation">
-                <a href="Index.html">Accueil</a>
+                <a href="index.html">Accueil</a>
                 <a href="PagePresentation">Présentation de l'entreprise</a>
                 <a href="PageEnCeMoment">En ce moment</a>
                 <a id="Pageactuelle" href="PageEconomie">Economie</a>
@@ -32,20 +32,28 @@
                 <span>ATTENTION : il est important de noter que toutes les informations présentent sur cette page n'ont pas ete mises a jour depuis 2023.</span>
             </div>
             <div class="contextéco">
-                <span>fnjkesnbfk</span>
+                <h2>INTRODUCTION AU CONTEXTE ECONOMIQUE</h2>
+                <span>Arkane Studios, fondé en 1999 et acquis par Microsoft en 2021 lors du rachat de ZeniMax Media pour 7,5 milliards de dollars, est un développeur de jeux vidéo renommé. Célèbre pour des franchises comme Dishonored et Prey, le studio a su s’imposer dans l'industrie grâce à ses créations immersives. Cependant, malgré son succès critique, Arkane a récemment traversé une période difficile.
+
+                    En 2023, le lancement de Redfall, développé par Arkane Austin, a été mal accueilli en raison de problèmes techniques et de critiques négatives. Cet échec commercial a conduit à la fermeture d'Arkane Austin, une décision marquante dans l'histoire du studio.
+                    
+                    Aujourd'hui, Arkane Lyon continue ses activités, soutenu par la stratégie de contenu exclusif de Microsoft via le Game Pass. Le studio, qui compte environ 150 employés, doit désormais s’adapter à l’évolution du marché tout en préservant son identité créative.</span>
             </div>
             <div></div>
             <div class="div_container">
                 <div class="eltg">
                     <div class="texte1">
-                        <span>La société Arkane Studios a été créée en octobre 1999, et elle dispose d’un capital social de 181 k€. Elle a réalisé un chiffre d'affaires de 17 M€ en 2020 en s'appuyant sur un effectif de plus de 140 personnes.</span> <!--source:https://www.xerfi.com/etudes-par-entreprise/ARKANE-STUDIOS_424606176-->
+                        <span>Depuis 2020, le résultat d'exploitation d'Arkane Studios a connu des fluctuations régulières. En 2020, il s'élevait à 1,17 M€. En 2021, il a enregistré une hausse de 53 % pour atteindre 1,8 M€. Cependant, en 2022, il a légèrement baissé à 1,4 M€, soit une diminution de 11,11 %. En 2023, le résultat a repris une légère croissance, atteignant 1,53 M€, correspondant à une augmentation de 9,29 %. Ces variations reflètent bien le classement de l'entreprise basé sur son résultat d'exploitation que nous pourrons voir ci dessous.</span> <!--source:https://www.xerfi.com/etudes-par-entreprise/ARKANE-STUDIOS_424606176-->
+                        <div class="graph1" id="g3">
+                            <img src="REX.png" alt="graphique sur le résultat d'exploitation de l'entreprise">
+                        </div>
                    </div>
                     <div class="ensemble1">
                         <div class="texte2">
                             <span>La rentabilité financiere de l'entreprise a diminué depuis 2020 en passant de 21,32% en 2020 a 4.48% en 2022 malgré une tres legere hausse en 2021 a 21,50%. dans l'ensemble, l'année 2022 est une année moins bonne que les autres au niveau des performances pour le studio lyonnais comme nous pouvons le voir avec la baisse de sa capacité d'autofinancement de 31,08% en 2021 a 10,02% en 2022 ou encore la diminution de la rentabilité nette finale qui passe de 27,64% en 2021 a 6,52% en 2022</span>
                         </div>
                         <div class="graph" id="g2">
-                            <img src="rentabilité_financiere.jpg" alt="graphique de la rentabilité financiere de l'entreprise">
+                            <img src="REX.png" alt="graphique de le résultat d'exploitation de l'entreprise">
                         </div>
                     </div>
                 </div>
@@ -54,9 +62,8 @@
                         <img src="CA.png" alt="graphique du chiffre d'affaire">
                     </div>
                     <div class="texte3">
-                        <span>Ce graphe permet de mesurer l'évolution du chiffre d'affaires et de la rentabilité de l'entreprise.
-                            La rentabilité est mesurée gr?ce à l'Excédent Brut d'Exploitation (EBE) qui, à la différence du Résultat d'Exploitation, 
-                            ne tient pas compte des choix de gestion de l'entreprise (dotations/reprises aux amortissements et transferts de charges). 
+                        <span class="presg">Ce graph nous présente l'évolution du chiffre d'affaire d'Arkane studios de 2015 à 2023 .</span><br>
+                           <span>Depuis 2015, le chiffre d'affaires du studio a presque doublé, avec une croissance totale de 90,91%. Après une baisse initiale de 18,18% entre 2015 et 2017, le chiffre d'affaires a fortement progressé de 122,22% jusqu'en 2021, notamment avec des lancements à succès comme *Prey* et *Dishonored 3*. L'année 2019, marquée par la crise COVID, a vu une hausse significative. En 2021, une légère baisse de 5% a suivi le rachat par Microsoft, période durant laquelle aucun jeu majeur n'a été lancé avant *Deathloop* en fin d'année. De 2022 à 2023, le chiffre d'affaires a repris avec une croissance de 10,53%, soutenue par le succès de ce dernier titre. 
                             </span> <!--source:https://www.societe.com/societe/arkane-studios-424606176.html#__analyse-->
                     </div>
                 </div>
