--- a/PagePresentation.html
+++ b/PagePresentation.html
@@ -29,7 +29,12 @@
    
 
     <div class="Page">
-
+            <div class="images-container">
+                <img src="Arkanebureaux.jpg" alt="Image 1" class="item-image">
+                <div class="ptitimage"> 
+                    <img src="jeux.jpeg" alt="Image 2" class="item-image">
+                    <img src="images.jpeg" alt="Image 3" class="item-image">    
+                </div>  
         <div class="container">
             <div class="text-container">
                 <h1>Qui sont-ils ?</h1>
