--- a/PagePresentation.html
+++ b/PagePresentation.html
@@ -61,7 +61,7 @@
                  <div class="images-container">
                         <img src="Arkanebureaux.jpg" alt="Image 1" class="item-image">
                         <div class="ptitimage"> 
-                            <img src="jeux.jpeg" alt="Image 2" class="item-image">
+                            <img src="jeux.jpg" alt="Image 2" class="item-image">
                             <img src="images.jpeg" alt="Image 3" class="item-image">    
                 </div> 
                     <div id="texte2">  
