--- a/PageChiffre.html
+++ b/PageChiffre.html
@@ -16,7 +16,7 @@
 
     <header id="Bandeau_haut">
         <div id="logo">
-            <img src="Logo.png" alt="Logo" width="300" height="180"> 
+            <img src="Logo.png" alt="Logo" width="160" height="80"> 
         </div>
        
         <div id="Navigation">
@@ -52,17 +52,27 @@
                 </p>
             </div>
             <div class="item">
-                <a href="#c3">
-                    <h3>Chiffres Economies</h3>
-                        <ul>
-                        <li>Chiffre d'affaire : 120 012 026 €</li><br>
-                        <li>Rentabilitée économique : 1 012 €</li><br>
-                        <li>Taux de marge nette : 10 €</li><br>
-                    </ul>
+                <a href="#c3a">
+                    <h3>Chiffre d'Affaire</h3>
+                    <p>Le chiffre d'affaire d'Arkane Studio en 2023<br/> est de 21 145 160 €.</p>
                 </a>
-                <a href="#c3_close">
-                    <img id="c3" src="Test_graph.png">
+                <a href="#c3a_close">
+                    <img id="c3a" src="Chiffre Affaire.png" width="650px">
                 </a>
+            </div>
+            <div class="item">
+                <a href="#c3b">
+                    <h3>Resultat Net</h3>
+                    <p>Le résultat net d'Arkane Studio en 2023<br/> est de 1 538 836 €</p>
+                </a>
+                <a href="#c3b_close">
+                    <img id="c3b" src="Resultat Net.png" width="350px">
+                </a>
+            </div>
+            <div class="item">
+                <a href="#c3c">
+                    <h3>Capital Social</h3>
+                    <p>Le capital social d'Arkane Studio<br/> est de 181 141 €</p>
             </div>
             <div class="item">
                 <a href="#c4">
@@ -74,41 +84,43 @@
                     </ul>
                 </a>
                 <a href="#c4_close">
-                    <img id="c4" src="Test_graph.png">
+                    <img id="c4" src="Liste Jeux.png">
+                </a>
+            </div>
+            <div class="item">
+                <a href="#c7">
+                    <p><b>Effectif de l'entreprise</b><br/><br/>
+                    Arkane Studio compte <b>155 salariés</b>, en 2024.<br/> Une perte de <b>100 employés</b> après la fermeture du Studio d'Austin</p>
+                </a>
+                <a href="#c7_close">
+                    <div id="c7">
+                        <img src="Graphique Effectif.png" width="650px">
+                    </div>
                 </a>
             </div>
             <div class="item">
                 <a href="#c5">
                     <P><b>Avis Jeux sur Steam</b></P>
                     <ul>
-                        <li>Dishonored : 60 000 avis <b class="positif">très positif</b></li>
+                        <li>Dishonored 2 : 38 000 avis <b class="positif">très positif</b></li>
                         <li>Prey : 33 000 avis <b class="positif">très positif</b></li>
                         <li>DeathLoop : 18 000 avis <b class="positif">plutôt positif</b></li>
                         <li>RedFall: 2 300 avis <b class="negatif">plutôt négatif</b></li>
                     </ul>
                 </a>
                 <a href="#c5_close">
-                    <img id="c5" src="Test_graph.png">
+                    <img id="c5" src="Graphique Avis.png" width="650px">
                 </a>
             </div>
             <div class="item">
-                <a href="#c6">
-                    <P><b>Quelques comparaisons</b></P>
-                    <p><i>A venir</i></p>
-                </a>
-                <a href="#c6_close">
-                    <img id="c6" src="Test_graph.png">
-                </a>
-            </div>
-            <div class="item">
-                <a href="#c7">
-                    <P><b>Effectif de l'entreprise</b></P>
-                    <p>Arkane Studio compte <b>255 salariés</b>, en 2022</p>
-                </a>
-                <a href="#c7_close">
-                    <img id="c7" src="Test_graph.png">
-                </a>
-            </div>
+                <P><b>Quelques comparaisons nationaux <br/> entre Studio de Jeux vidéos</b></P>
+                <ul>
+                    <li>Nombre employé | Ubisoft : <br/>20 445 en plus | Ankama : 145 en plus</li>
+                    <li>Nombre de jeux total | Ubisoft : <br/>519 en plus | Ankama : 8 en plus</li>
+                    <li>Chiffer d'Affaire | Ubisoft : <br/>2 579 Millions en plus | Anakama : 5 Millions en plus</li>
+                </ul>
+            </div> 
+
         </div>
 
 
