--- a/PageEconomie.html
+++ b/PageEconomie.html
@@ -42,22 +42,61 @@
             <div></div>
             <div class="div_container">
                 <div class="eltg">
-                    <div class="texte1">
-                        <span>Depuis 2020, le résultat d'exploitation d'Arkane Studios a connu des fluctuations régulières. En 2020, il s'élevait à 1,17 M€. En 2021, il a enregistré une hausse de 53 % pour atteindre 1,8 M€. Cependant, en 2022, il a légèrement baissé à 1,4 M€, soit une diminution de 11,11 %. En 2023, le résultat a repris une légère croissance, atteignant 1,53 M€, correspondant à une augmentation de 9,29 %. Ces variations reflètent bien le classement de l'entreprise basé sur son résultat d'exploitation que nous pourrons voir ci dessous.</span> <!--source:https://www.xerfi.com/etudes-par-entreprise/ARKANE-STUDIOS_424606176-->
-                        <div class="graph1" id="g3">
-                            <img src="REX.png" alt="graphique sur le résultat d'exploitation de l'entreprise">
-                        </div>
-                   </div>
+
                     <div class="ensemble1">
-                        <div class="texte2">
-                            <span>La rentabilité financiere de l'entreprise a diminué depuis 2020 en passant de 21,32% en 2020 a 4.48% en 2022 malgré une tres legere hausse en 2021 a 21,50%. dans l'ensemble, l'année 2022 est une année moins bonne que les autres au niveau des performances pour le studio lyonnais comme nous pouvons le voir avec la baisse de sa capacité d'autofinancement de 31,08% en 2021 a 10,02% en 2022 ou encore la diminution de la rentabilité nette finale qui passe de 27,64% en 2021 a 6,52% en 2022</span>
+                        <h2>RESULTATS</h2>
+                        <div class="texte1">
+                            <div class="REX">
+                                <h2>résultat d'exploitation :</h2>
+                                <span>Depuis 2020, le résultat d'exploitation d'Arkane Studios a connu des fluctuations régulières. En 2020, il s'élevait à 1,17 M€. En 2021, il a enregistré une hausse de 53 % pour atteindre 1,8 M€. Cependant, en 2022, il a légèrement baissé à 1,4 M€, soit une diminution de 11,11 %. En 2023, le résultat a repris une légère croissance, atteignant 1,53 M€, correspondant à une augmentation de 9,29 %. Ces variations reflètent bien le classement de l'entreprise basé sur son résultat d'exploitation que nous pourrons voir ci dessous.</span> <!--source:https://www.xerfi.com/etudes-par-entreprise/ARKANE-STUDIOS_424606176-->
+                            </div>
+                            <div class="graph1" id="g3">
+                                <img src="REX.png" alt="graphique sur le résultat d'exploitation de l'entreprise">
+                            </div>
+                       </div>
+                       <div class="ensemble12">
+                            <div class="texte2">
+                                <div class="resnet">
+                                    <h2>résultats nets</h2>
+                                    <span>Arkane Studios a connu des variations significatives dans ses résultats nets ces dernières années. Entre 2018 et 2021, l'entreprise a affiché une croissance continue, avec des résultats passant de 1 022 474 € en 2018 à 4 467 933 € en 2020, puis atteignant un sommet de 5 741 291 € en 2021. Cette période de forte croissance a été marquée par le succès de plusieurs de leurs jeux, renforçant leur position dans l'industrie du jeu vidéo.
+
+                                        Cependant, en 2022, une baisse brutale est survenue, les résultats nets chutant à 1 253 077 €. Ce recul coïncide avec le rachat de l'entreprise par Microsoft, un événement majeur qui a sans doute influencé la dynamique financière de l'entreprise. Malgré cette chute, Arkane Studios a montré des signes de reprise en 2023, avec des résultats nets en légère augmentation, atteignant 1 538 836 €. 
+                                        
+                                        Cette évolution financière reflète les défis et les opportunités liés à l'intégration au sein d'un grand groupe comme Microsoft, tout en soulignant l'importance de l'adaptation à un marché en constante évolution.</span>
+                                </div>
+                            </div>
+                            <div class="graph" id="g2">
+                                <img src="résultats nets.png" alt="graphique des résultats nets de l'entreprise">
+                            </div>
                         </div>
-                        <div class="graph" id="g2">
-                            <img src="REX.png" alt="graphique de le résultat d'exploitation de l'entreprise">
+                    </div>
+                    <div class="ensemble2">
+                        <h2>RENTABILITE</h2>
+                        <div class="renta">
+                            <div class="graph3">
+                                <img src="rentabilité_financiere.jpg" alt="graphique de la rentabilité financiere">
+                            </div>
+                            <div class="texte4">
+                                <span>La rentabilité financiere de l'entreprise a diminué depuis 2020 en passant de 21,32% en 2020 a 4.48% en 2022 malgré une tres legere hausse en 2021 a 21,50%. dans l'ensemble, l'année 2022 est une année moins bonne que les autres au niveau des performances pour le studio lyonnais comme nous pouvons le voir avec la baisse de sa capacité d'autofinancement de 31,08% en 2021 a 10,02% en 2022 ou encore la diminution de la rentabilité nette finale qui passe de 27,64% en 2021 a 6,52% en 2022</span>
+                            </div>
+                        </div>
+                        <div class="marge">
+                            <h2>MARGE</h2>
+                            <div class="ensemble3">
+                                <div class="texte5">
+                                    <span>
+                                        Arkane Studios, le célèbre développeur de jeux vidéo derrière Dishonored et Deathloop, a connu une évolution financière intéressante ces dernières années. Filiale de ZeniMax Media (acquise par Microsoft en 2021), Arkane a vu son chiffre d'affaires dépendre principalement de sa société mère. En 2022, l'entreprise a réalisé un chiffre d'affaires de 31,6 millions d'euros, avec un bénéfice net de 1,25 million d'euros. Leur taux de marge nette lui, as connu une forte baisse.Effectivement, il est passée de 27,64% en 2021 a 6,52% en 2022 alors qu'il s'est maintenu au dessus de 20% depuis un certain nombre d'année, il était de 26,66% en 2020 et de 27,93% en 2019. 
+                                    </span>
+                                </div>
+                                <div class="graph3">
+                                    <img src="taux de marge nette.png" alt="graphique du taux de marge nette de l'entreprise">
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="eltd">
+                    <h2>CHIFFRE D'AFFAIRE</h2>
                     <div class="graph" id="g1">
                         <img src="CA.png" alt="graphique du chiffre d'affaire">
                     </div>
