Update du titre de la page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <section class="Bandeau_acc">
         <h1>
-            <span>Bienvenue sur le prototype de la page d'accueil !!</span>
+            <span>Bienvenue sur le site de présentation d'ARKANE STUDIOS !!</span>
         </h1>
         
     </section>
