minia_en ce moment

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
 
         <div class="image">
-            <a href="PageEnCeMoment.html"><img src="cone.jpg"
+            <a href="PageEnCeMoment.html"><img src="minia_ECM.jpg"
                 alt="Page des actualités d'Arkane Studios"
                 height="200" width="355">
     
