--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
 
         <div class="image">
-            <a href="PageChiffre"><img src="cone.jpg"
+            <a href="PageChiffre"><img src="Affiche_Page_Chiffre.png"
                 alt="Statistiques sur Arkane Studios"
                 height="200" width="355">
     
