--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
 
         <div class="image">
-            <a href="PageEnCeMoment.html"><img src="minia_ECM.jpg"
+            <a href="PageEnCeMoment.html"><img src="minia_ECM.png"
                 alt="Page des actualités d'Arkane Studios"
                 height="200" width="355">
     
@@ -78,7 +78,7 @@
         </div>
 
         <div class="image">
-            <a href="PageChiffre"><img src="Affiche_Page_Chiffre.png"
+            <a href="PageChiffre"><img src="Affiche Page Chiffre.png"
                 alt="Statistiques sur Arkane Studios"
                 height="200" width="355">
     
