--- a/PageChiffre.html
+++ b/PageChiffre.html
@@ -21,7 +21,7 @@
        
         <div id="Navigation">
                 <a href="index.html">Accueil</a>
-                <a href="PagePresentation.html">Présentation de l'entreprise</a>
+                <a href="PagePresentation.html">Présentation</a>
                 <a href="PageEnCeMoment.html">En ce moment</a>
                 <a href="PageEconomie.html">Economie</a>
                 <a id="Pageactuelle" href="#">Chiffres</a>
@@ -32,9 +32,12 @@
     <h1>
         Les chiffres d'Arkane Studios, vingt ans de jeux vidéo
     </h1>
-    <br>
+
         <div class="container">
-            <div class="item">
+            <div>
+                <i>Information : Cliquer sur le texte pour faire apparaître l'image et appuyer sur l'image pour la faire disparaître</i> 
+            </div>
+            <div class="item_sans_image">
                 <h3>Récompenses Jeux et Studio</h3>   
                 <ul>
                     <li>DeathLoop : 2 Game Awards 2021</li>
@@ -43,7 +46,7 @@
                     <li><b>Deux oscars</b> du jeu vidéo pour Arkane Studio</li>
                 </ul>
             </div>
-            <div class="item">
+            <div class="item_sans_image">
                 <h3>Premier Jeu</h3>
                 <p>
                     Arx Fatalis est le <b>premier jeu développé par Arkane Studio</b> <br>
@@ -52,29 +55,31 @@
                 </p>
             </div>
             <div class="item">
+                <a href="#c3a_close">
+                <img id="c3a" src="Chiffre_Affaire.png" alt="Image_Chiffre_Affaire">
+                </a>
                 <a href="#c3a">
                     <h3>Chiffre d'Affaire</h3>
-                    <p>Le chiffre d'affaire d'Arkane Studio en 2023<br/> est de 21 145 160 €.</p>
-                </a>
-                <a href="#c3a_close">
-                    <img id="c3a" src="Chiffre Affaire.png" width="650px">
+                    <p>Le chiffre d'affaire d'Arkane Studio en 2023<br> est de 21 145 160 €.</p>
                 </a>
             </div>
             <div class="item">
+                <a href="#c3b_close">
+                    <img id="c3b" src="Resultat_Net.png" alt="Image_Resultat_Net">
+                </a>
                 <a href="#c3b">
                     <h3>Resultat Net</h3>
-                    <p>Le résultat net d'Arkane Studio en 2023<br/> est de 1 538 836 €</p>
-                </a>
-                <a href="#c3b_close">
-                    <img id="c3b" src="Resultat Net.png" width="350px">
+                    <p>Le résultat net d'Arkane Studio en 2023<br> est de 1 538 836 €</p>
                 </a>
             </div>
-            <div class="item">
-                <a href="#c3c">
-                    <h3>Capital Social</h3>
-                    <p>Le capital social d'Arkane Studio<br/> est de 181 141 €</p>
+            <div class="item_sans_image">
+                <h3>Capital Social</h3>
+                <p>Le capital social d'Arkane Studio<br> est de 181 141 €</p>
             </div>
             <div class="item">
+                <a href="#c4_close">
+                    <img id="c4" src="Liste_Jeux.png" alt="Image_Liste_Jeux">
+                </a>
                 <a href="#c4">
                     <h3> 13 Jeux Développés</h3>
                     <ul>
@@ -83,22 +88,20 @@
                         <li>Un en cours de <b>développement</b></li>
                     </ul>
                 </a>
-                <a href="#c4_close">
-                    <img id="c4" src="Liste Jeux.png">
-                </a>
             </div>
             <div class="item">
-                <a href="#c7">
-                    <p><b>Effectif de l'entreprise</b><br/><br/>
-                    Arkane Studio compte <b>155 salariés</b>, en 2024.<br/> Une perte de <b>100 employés</b> après la fermeture du Studio d'Austin</p>
-                </a>
                 <a href="#c7_close">
-                    <div id="c7">
-                        <img src="Graphique Effectif.png" width="650px">
-                    </div>
+                    <img id="c7" src="Graphique_Effectif.png" alt="Image_Effectif">
+                </a>
+                <a href="#c7">
+                    <p><b>Effectif de l'entreprise</b><br><br>
+                    Arkane Studio compte <b>155 salariés</b>, en 2024.<br> Une perte de <b>100 employés</b> après la fermeture du Studio d'Austin</p>
                 </a>
             </div>
             <div class="item">
+                <a href="#c5_close">
+                    <img id="c5" src="Graphique_Avis.png" alt="Image_Avis">
+                </a>
                 <a href="#c5">
                     <P><b>Avis Jeux sur Steam</b></P>
                     <ul>
@@ -108,16 +111,13 @@
                         <li>RedFall: 2 300 avis <b class="negatif">plutôt négatif</b></li>
                     </ul>
                 </a>
-                <a href="#c5_close">
-                    <img id="c5" src="Graphique Avis.png" width="650px">
-                </a>
             </div>
-            <div class="item">
-                <P><b>Quelques comparaisons nationaux <br/> entre Studio de Jeux vidéos</b></P>
+            <div class="item_sans_image">
+                <P><b>Quelques comparaisons nationaux <br> entre Studio de Jeux vidéos</b></P>
                 <ul>
-                    <li>Nombre employé | Ubisoft : <br/>20 445 en plus | Ankama : 145 en plus</li>
-                    <li>Nombre de jeux total | Ubisoft : <br/>519 en plus | Ankama : 8 en plus</li>
-                    <li>Chiffer d'Affaire | Ubisoft : <br/>2 579 Millions en plus | Anakama : 5 Millions en plus</li>
+                    <li>Nombre employé | Ubisoft : <br>20 445 en plus | Ankama : 145 en plus</li>
+                    <li>Nombre de jeux total | Ubisoft : <br>519 en plus | Ankama : 8 en plus</li>
+                    <li>Chiffer d'Affaire | Ubisoft : <br>2 579 Millions en plus | Anakama : 5 Millions en plus</li>
                 </ul>
             </div> 
 
