--- a/PageChiffre.html
+++ b/PageChiffre.html
@@ -28,12 +28,10 @@
         </div>
     </header>
 
-
-    <h1>
-        Les chiffres d'Arkane Studios, vingt ans de jeux vidéo
-    </h1>
-
         <div class="container">
+            <h1 id="slogan">
+                Les chiffres d'Arkane Studios, vingt ans de jeux vidéo
+            </h1>
             <div>
                 <i>Information : Cliquer sur le texte pour faire apparaître l'image et appuyer sur l'image pour la faire disparaître</i> 
             </div>
@@ -51,7 +49,7 @@
                 <p>
                     Arx Fatalis est le <b>premier jeu développé par Arkane Studio</b> <br>
                     sortie <b>en 2002</b> sur PC puis sur XBOX, genre Aventure/RPG* principalement <br> <br>
-                    <i><small>* genre de jeu vidéo s'inspirant des codes et du principe des jeux de rôle sur table</small></i>
+                    <i><small>* Genre de jeu vidéo s'inspirant des codes et du principe des jeux de rôle sur table</small></i>
                 </p>
             </div>
             <div class="item">
@@ -59,8 +57,8 @@
                 <img id="c3a" src="Chiffre_Affaire.png" alt="Image_Chiffre_Affaire">
                 </a>
                 <a href="#c3a">
-                    <h3>Chiffre d'Affaire</h3>
-                    <p>Le chiffre d'affaire d'Arkane Studio en 2023<br> est de 21 145 160 €.</p>
+                    <h3>Chiffre d'Affaires</h3>
+                    <p>Le chiffre d'affaires d'Arkane Studio en 2023<br> est de 21 145 160 €.</p>
                 </a>
             </div>
             <div class="item">
@@ -83,7 +81,7 @@
                 <a href="#c4">
                     <h3> 13 Jeux Développés</h3>
                     <ul>
-                        <li>11 jeux Sorties <b>depuis 2002</b></li>
+                        <li>11 jeux sortis <b>depuis 2002</b></li>
                         <li>Un jeu <b>annulé</b></li>
                         <li>Un en cours de <b>développement</b></li>
                     </ul>
@@ -95,7 +93,7 @@
                 </a>
                 <a href="#c7">
                     <p><b>Effectif de l'entreprise</b><br><br>
-                    Arkane Studio compte <b>155 salariés</b>, en 2024.<br> Une perte de <b>100 employés</b> après la fermeture du Studio d'Austin</p>
+                    Arkane Studio compte <b>155 salariés</b> en 2024.<br> Une perte de <b>100 employés</b> après la fermeture du Studio d'Austin</p>
                 </a>
             </div>
             <div class="item">
@@ -113,11 +111,11 @@
                 </a>
             </div>
             <div class="item_sans_image">
-                <P><b>Quelques comparaisons nationaux <br> entre Studio de Jeux vidéos</b></P>
+                <P><b>Quelques comparaisons nationales <br> entre Studio de Jeux vidéos</b></P>
                 <ul>
                     <li>Nombre employé | Ubisoft : <br>20 445 en plus | Ankama : 145 en plus</li>
                     <li>Nombre de jeux total | Ubisoft : <br>519 en plus | Ankama : 8 en plus</li>
-                    <li>Chiffer d'Affaire | Ubisoft : <br>2 579 Millions en plus | Anakama : 5 Millions en plus</li>
+                    <li>Chiffres d'Affaires | Ubisoft : <br>2 579 Millions en plus | Anakama : 5 Millions en plus</li>
                 </ul>
             </div> 
 
@@ -133,7 +131,7 @@
                 <div>
                     <img src="Logo.png" alt="Logo" width="100" height="80">
                     <br>
-                    &copy; 2024 Oscar DUFOSSEZ
+                    &copy; 2024 Luca Dussol
                 </div>
                 
                 <div>
