--- a/PageEconomie.html
+++ b/PageEconomie.html
@@ -10,11 +10,12 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <title>économie et écologie</title>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=close" />
     </head>
 <body>
     <header id="Bandeau_haut">
         <div id="logo">
-            <img src="Logo.png" alt="Logo" width="300" height="180"> 
+            <img src="Logo.png" alt="Logo" width="160" height="80"> 
         </div>
        
         <div id="Navigation">
@@ -37,7 +38,7 @@
 
                     En 2023, le lancement de Redfall, développé par Arkane Austin, a été mal accueilli en raison de problèmes techniques et de critiques négatives. Cet échec commercial a conduit à la fermeture d'Arkane Austin, une décision marquante dans l'histoire du studio.
                     
-                    Aujourd'hui, Arkane Lyon continue ses activités, soutenu par la stratégie de contenu exclusif de Microsoft via le Game Pass. Le studio, qui compte environ 150 employés, doit désormais s’adapter à l’évolution du marché tout en préservant son identité créative.</span>
+                    Aujourd'hui, Arkane Lyon continue ses activités, soutenu par la stratégie de contenu exclusif de Microsoft via le Game Pass. Le studio, qui compte environ 150 employés, doit désormais s’adapter à l’évolution du marché tout en préservant son identité créative. Le capital social de l'entreprise s'éleve à hauteur de 181 414,33 €.</span>
             </div>
             <div></div>
             <div class="div_container">
@@ -51,7 +52,14 @@
                                 <span>Depuis 2020, le résultat d'exploitation d'Arkane Studios a connu des fluctuations régulières. En 2020, il s'élevait à 1,17 M€. En 2021, il a enregistré une hausse de 53 % pour atteindre 1,8 M€. Cependant, en 2022, il a légèrement baissé à 1,4 M€, soit une diminution de 11,11 %. En 2023, le résultat a repris une légère croissance, atteignant 1,53 M€, correspondant à une augmentation de 9,29 %. Ces variations reflètent bien le classement de l'entreprise basé sur son résultat d'exploitation que nous pourrons voir ci dessous.</span> <!--source:https://www.xerfi.com/etudes-par-entreprise/ARKANE-STUDIOS_424606176-->
                             </div>
                             <div class="graph1" id="g3">
-                                <img src="REX.png" alt="graphique sur le résultat d'exploitation de l'entreprise">
+                                <a href="#agrandi">
+                                    <img src="REX.png" alt="graphique sur le résultat d'exploitation de l'entreprise" id="agrandi" id="retreci">
+                                </a>
+                                <a href="#retreci" class="croix">
+                                    <span class="material-symbols-outlined">
+                                        close
+                                    </span>
+                                </a>
                             </div>
                        </div>
                        <div class="ensemble12">
@@ -66,7 +74,14 @@
                                 </div>
                             </div>
                             <div class="graph" id="g2">
-                                <img src="résultats nets.png" alt="graphique des résultats nets de l'entreprise">
+                                <a href="#agrandi1">
+                                    <img src="résultats nets.png" alt="graphique des résultats nets de l'entreprise" id="agrandi1" id="retreci1">
+                                </a>
+                                <a href="#retreci1" class="croix">
+                                    <span class="material-symbols-outlined">
+                                        close
+                                    </span>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -74,22 +89,36 @@
                         <h2>RENTABILITE</h2>
                         <div class="renta">
                             <div class="graph3">
-                                <img src="rentabilité_financiere.jpg" alt="graphique de la rentabilité financiere">
+                                <a href="#agrandi2">
+                                    <img src="rentabilité_financiere.jpg" alt="graphique de la rentabilité financiere" id="agrandi2" id="retreci2">
+                                </a>
+                                <a href="#retreci2" class="croix">
+                                    <span class="material-symbols-outlined">
+                                        close
+                                    </span>
+                                </a>
                             </div>
                             <div class="texte4">
                                 <span>La rentabilité financiere de l'entreprise a diminué depuis 2020 en passant de 21,32% en 2020 a 4.48% en 2022 malgré une tres legere hausse en 2021 a 21,50%. dans l'ensemble, l'année 2022 est une année moins bonne que les autres au niveau des performances pour le studio lyonnais comme nous pouvons le voir avec la baisse de sa capacité d'autofinancement de 31,08% en 2021 a 10,02% en 2022 ou encore la diminution de la rentabilité nette finale qui passe de 27,64% en 2021 a 6,52% en 2022</span>
                             </div>
                         </div>
                         <div class="marge">
-                            <h2>MARGE</h2>
                             <div class="ensemble3">
                                 <div class="texte5">
+                                    <h2>MARGE</h2>
                                     <span>
                                         Arkane Studios, le célèbre développeur de jeux vidéo derrière Dishonored et Deathloop, a connu une évolution financière intéressante ces dernières années. Filiale de ZeniMax Media (acquise par Microsoft en 2021), Arkane a vu son chiffre d'affaires dépendre principalement de sa société mère. En 2022, l'entreprise a réalisé un chiffre d'affaires de 31,6 millions d'euros, avec un bénéfice net de 1,25 million d'euros. Leur taux de marge nette lui, as connu une forte baisse.Effectivement, il est passée de 27,64% en 2021 a 6,52% en 2022 alors qu'il s'est maintenu au dessus de 20% depuis un certain nombre d'année, il était de 26,66% en 2020 et de 27,93% en 2019. 
                                     </span>
                                 </div>
                                 <div class="graph3">
-                                    <img src="taux de marge nette.png" alt="graphique du taux de marge nette de l'entreprise">
+                                    <a href="#agrandi3">
+                                        <img src="taux de marge nette.png" alt="graphique du taux de marge nette de l'entreprise" id="agrandi3" id="retreci3">
+                                    </a>
+                                    <a href="#retreci3" class="croix">
+                                        <span class="material-symbols-outlined">
+                                            close
+                                        </span>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -98,7 +127,14 @@
                 <div class="eltd">
                     <h2>CHIFFRE D'AFFAIRE</h2>
                     <div class="graph" id="g1">
-                        <img src="CA.png" alt="graphique du chiffre d'affaire">
+                        <a href="#agrandi4">
+                            <img src="CA.png" alt="graphique du chiffre d'affaire" id="agrandi4" id="retreci4">
+                        </a>
+                        <a href="#retreci4" class="croix">
+                            <span class="material-symbols-outlined">
+                                close
+                            </span>
+                        </a>
                     </div>
                     <div class="texte3">
                         <span class="presg">Ce graph nous présente l'évolution du chiffre d'affaire d'Arkane studios de 2015 à 2023 .</span><br>
