--- a/PageEconomie.html
+++ b/PageEconomie.html
@@ -9,8 +9,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=close" >
         <title>économie et écologie</title>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=close" />
     </head>
 <body>
     <header id="Bandeau_haut">
@@ -27,8 +27,8 @@
         </div>
     </header>
     <section class="page">
+        <h1>ECONOMIE</h1>
         <section class="economie" >
-            <h1>ECONOMIE</h1>
             <div class="disclaimer">
                 <span>ATTENTION : il est important de noter que toutes les informations présentent sur cette page n'ont pas ete mises a jour depuis 2023.</span>
             </div>
@@ -53,7 +53,7 @@
                             </div>
                             <div class="graph1" id="g3">
                                 <a href="#agrandi">
-                                    <img src="REX.png" alt="graphique sur le résultat d'exploitation de l'entreprise" id="agrandi" id="retreci">
+                                    <img src="REX.png" alt="graphique sur le résultat d'exploitation de l'entreprise" id="agrandi" >
                                 </a>
                                 <a href="#retreci" class="croix">
                                     <span class="material-symbols-outlined">
@@ -75,7 +75,7 @@
                             </div>
                             <div class="graph" id="g2">
                                 <a href="#agrandi1">
-                                    <img src="résultats nets.png" alt="graphique des résultats nets de l'entreprise" id="agrandi1" id="retreci1">
+                                    <img src="résultats_nets.png" alt="graphique des résultats nets de l'entreprise" id="agrandi1" >
                                 </a>
                                 <a href="#retreci1" class="croix">
                                     <span class="material-symbols-outlined">
@@ -90,7 +90,7 @@
                         <div class="renta">
                             <div class="graph3">
                                 <a href="#agrandi2">
-                                    <img src="rentabilité_financiere.jpg" alt="graphique de la rentabilité financiere" id="agrandi2" id="retreci2">
+                                    <img src="rentabilité_financiere.jpg" alt="graphique de la rentabilité financiere" id="agrandi2" >
                                 </a>
                                 <a href="#retreci2" class="croix">
                                     <span class="material-symbols-outlined">
@@ -112,7 +112,7 @@
                                 </div>
                                 <div class="graph3">
                                     <a href="#agrandi3">
-                                        <img src="taux de marge nette.png" alt="graphique du taux de marge nette de l'entreprise" id="agrandi3" id="retreci3">
+                                        <img src="taux_de_marge_nette.png" alt="graphique du taux de marge nette de l'entreprise" id="agrandi3">
                                     </a>
                                     <a href="#retreci3" class="croix">
                                         <span class="material-symbols-outlined">
@@ -128,7 +128,7 @@
                     <h2>CHIFFRE D'AFFAIRE</h2>
                     <div class="graph" id="g1">
                         <a href="#agrandi4">
-                            <img src="CA.png" alt="graphique du chiffre d'affaire" id="agrandi4" id="retreci4">
+                            <img src="CA.png" alt="graphique du chiffre d'affaire" id="agrandi4">
                         </a>
                         <a href="#retreci4" class="croix">
                             <span class="material-symbols-outlined">
@@ -145,8 +145,8 @@
             </div>
 
         </section>
-        <section class="ecologie" >
-            <h1>ECOLOGIE</h1>
+        <h1>ECOLOGIE</h1>
+        <div class="ecologie">
             <div class="div_container">
                 <div class="texte_ecolo">
                     <span>Partage des idéologie et incite ses joueurs a recycler et tente de les sensibiliser a cette idee de recyclage notamment grace a son jeu PREY dans lequel les joueurs peuvent recycler n'importe quel element a n'importe quel moment. Integrer des notions telles que celles ci dans un jeu qui n'a rien a voir avec est une tres bonne idee qui peut sensibiliser beaucoup de joueurs peut importe leur age.   </span>
@@ -157,7 +157,7 @@
                 </div>
             </div>
 
-        </section>
+        </div>
 
     </section>
     <hr>
