--- a/PageEconomie.html
+++ b/PageEconomie.html
@@ -20,7 +20,7 @@
        
         <div id="Navigation">
                 <a href="index.html">Accueil</a>
-                <a href="PagePresentation">Présentation de l'entreprise</a>
+                <a href="PagePresentation">Présentation</a>
                 <a href="PageEnCeMoment">En ce moment</a>
                 <a id="Pageactuelle" href="PageEconomie">Economie</a>
                 <a href="PageChiffre">Chiffres</a>
