--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
        
         <div id="Navigation">
                 <a id="Pageactuelle" href="#">Accueil</a>
-                <a href="PagePresentation">Présentation de l'entreprise</a>
+                <a href="PagePresentation">Présentation</a>
                 <a href="PageEnCeMoment">En ce moment</a>
                 <a href="PageEconomie">Economie</a>
                 <a href="PageChiffre">Chiffres</a>
